--- a/src/index.scss
+++ b/src/index.scss
@@ -85,6 +85,7 @@ body {
 #root {
   margin: 0 auto;
   width: 100%;
+  height: calc(100vh - 177px);
   max-width: 4000px;
 }  
 
@@ -93,7 +94,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: calc(100% - 183px);
+  height: 100%;
 }
 
 .container {
@@ -104,15 +105,18 @@ main {
   @media (max-width:560px) {
     padding: 0 15px;
   }
+  @media (min-width: 1921px) {
+    padding: 0;
+  }
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--accent);
   text-decoration: inherit;
 
   &:hover {
-    color: #535bf2;
+    color: var(--accent);
   }
 }
 
