add unauthorized page

--- a/src/components/pages/Auth/index.module.scss
+++ b/src/components/pages/Auth/index.module.scss
@@ -7,6 +7,8 @@
     height: 100%;
 
     .frame {
+        margin: auto;
+        padding: 15vw 0;
         display: flex;
         flex-direction: column;
         gap: 2rem;
